# beetcamp

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  generate_requirements  post-commit  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties  test-lib  test_lib  url2json
.githooks/: post-commit  post-rewrite
.github/workflows/: build.yml  codeql.yml
beetcamp/: __init__.py  album_name.py  catalognum.py  genres_lookup.py  helpers.py  http.py  metaguru.py  names.py  search.py  track.py  tracks.py
beetsplug/bandcamp/: __init__.py  _helpers.py  _metaguru.py  _search.py  _tracks.py  album.py  album_name.py  catalognum.py  genres_lookup.py  helpers.py  http.py  metaguru.py  names.py  search.py  soundcloud.py  track.py  track_names.py  trackguru.py  tracks.py
tests/: conftest.py  jsons  test_album.py  test_album_name.py  test_catalognum.py  test_cmdline.py  test_genre.py  test_helpers.py  test_http.py  test_jsons.py  test_lib.py  test_metaguru.py  test_names.py  test_parsing.py  test_plugin.py  test_real_queries.py  test_search.py  test_track.py  test_track_names.py  test_tracks.py
tests/json/: album.json  album_expected.json  album_in_titles.json  album_with_track_alt.json  album_with_track_alt_expected.json  artist_catalognum.json  artist_mess.json  artist_mess_expected.json  compilation.json  compilation_expected.json  description_meta.json  description_meta_expected.json  edge_cases.json  edge_cases_expected.json  ep.json  ep_expected.json  hex002.json  hex008.json  issue-18.json  media_with_track_alts_in_desc.json  remix_artists.json  remix_artists_expected.json  remix_without_brackets.json  rr2.json  single.json  single_only_track_name.json  single_only_track_name_expected.json  single_track_release.json  single_track_release_expected.json  single_with_remixes.json  single_with_remixes_expected.json  track_alt.json  track_alt_edge_case.json
tests/json/expected/: album.json  album_in_titles.json  album_with_track_alt.json  artist_catalognum.json  artist_mess.json  compilation.json  description_meta.json  edge_cases.json  ep.json  hex002.json  hex008.json  issue-18.json  media_with_track_alts_in_desc.json  remix_artists.json  remix_without_brackets.json  rr2.json  single_only_track_name.json  single_track_release.json  single_with_remixes.json  track_alt_edge_case.json
tests/json/issues/: 18.json  18_expected.json
tests/json/issues/expected/: 18.json
