[project]
name = "beetcamp"
version = "0.23.0"
description = "Bandcamp autotagger source for beets (http://beets.io)."
authors = [{ name = "Šarūnas Nejus", email = "snejus@pm.me" }]
readme = "README.md"
license = "GPL-2.0"
requires-python = ">=3.9, <4"

include = ["LICENSE", "README.md"]

keywords = ["music", "bandcamp", "beets", "metadata"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Text Processing :: General",
]
dependencies = [
  "beets[fetchart] >= 1.5",
  "pycountry >= 20.7.3",
  "httpx >= 0.27.0",
  "packaging >= 24.0",
]

[project.urls]
homepage = "https://github.com/snejus/beetcamp"
repository = "https://github.com/snejus/beetcamp"
changelog = "https://github.com/snejus/beetcamp/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/snejus/beetcamp/issues"

[project.scripts]
beetcamp = "beetsplug.bandcamp:main"

[tool.poetry]
packages = [{ include = "beetsplug" }]

[tool.poetry.group.dev.dependencies]
coveralls = { version = ">=4.0.1", python = ">=3.8,<3.13" }
filelock = ">=3.16.1"
flake8 = ">=3.8.4"
flake8-bugbear = ">=22.7.1"
flake8-comprehensions = ">=3.10.0"
flake8-eradicate = ">=1.3.0"
gitpython = ">=3.1.43"
mypy = ">=0.790"
pylint = ">=2.7.4"
pytest = ">=6.2"
pytest-cov = ">=2.10.1"
pytest-randomly = ">=3.10"
pytest-xdist = ">=3.5.0"
rich-tables = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.test-files]
help = "Run tests on local release data files"
cmd = "pytest -k file -p no:randomly --no-cov -s"
