[project]
name = "beetcamp"
version = "0.24.1"
description = "Bandcamp autotagger source for beets (http://beets.io)."
authors = [{ name = "Šarūnas Nejus", email = "snejus@pm.me" }]
readme = "README.md"
license = "GPL-2.0"
requires-python = ">=3.10, <4"

include = ["LICENSE", "README.md"]

keywords = ["music", "bandcamp", "beets", "metadata"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Text Processing :: General",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "beets[fetchart] >= 1.5",
    "pycountry >= 20.7.3",
    "httpx >= 0.27.0",
    "packaging >= 24.0",
]

[project.urls]
homepage = "https://github.com/snejus/beetcamp"
repository = "https://github.com/snejus/beetcamp"
changelog = "https://github.com/snejus/beetcamp/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/snejus/beetcamp/issues"

[project.scripts]
beetcamp = "beetcamp:main"

[tool.poetry]
packages = [
    { include = "beetsplug" },
    { include = "beetcamp" },
]

[tool.poetry.group.dev.dependencies]
filelock = ">=3.16.1"
gitpython = ">=3.1.43"
mypy = ">=0.790"
pytest = ">=6.2"
pytest-cov = ">=2.10.1"
pytest-randomly = ">=3.10"
pytest-xdist = ">=3.5.0"
rich-tables = "*"
ruff = ">=0.14.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.test-files]
help = "Run tests on local release data files"
cmd = "pytest -k file -p no:randomly --no-cov -s"

[tool.ruff]
line-length = 88
target-version = "py310"
namespace-packages = ["beetsplug"]

[tool.ruff.lint]
future-annotations = true
select = [
    "ARG", # flake8-unused-arguments
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle errors
    "ERA", # flake8-eradicate
    "F", # pyflakes
    "G", # flake8-logging-format
    "I", # isort
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "PL", # pylint
    "PT", # flake8-pytest-style
    "RUF", # ruff
    "S", # flake8-bandit (security)
    "TCH", # flake8-type-checking
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]

ignore = [
    "B905", # Implicit `strict=False` is fine in zip calls
    "PLR0913", # too-many-arguments
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
known-local-folder = ["beetcamp"]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # Allow assert in tests

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["cached_classproperty"]
extend-ignore-names = ["cached_classproperty"]
